# coursework

./: CMakeLists.txt  README.md
databases/: testdb.db
doc/: Doxyfile
src/: CMakeLists.txt  admin_window.cpp  admin_window.h  admin_window.ui  create_column.cpp  create_column.h  create_column.ui  database.cpp  database.h  entity_create.cpp  entity_create.h  entity_create.ui  fk_create.cpp  fk_create.h  fk_create.ui  login_window.cpp  login_window.h  login_window.ui  main.cpp  oper_window.cpp  oper_window.h  oper_window.ui  rename_column.cpp  rename_column.h  rename_column.ui
